--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "odin project restaurant page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/HMichaut/restaurant-page#readme",
   "devDependencies": {
+    "css-loader": "^6.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1"
   }
